# openwater

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
doc/: .gitignore  1-Introduction.ipynb  2-Openwater-Concepts.ipynb  Example-1-1-SimpleCatchmentModel.ipynb  Example-1-2-CustomTemplate.ipynb  README.md  dimensions.md  environment.md  graph-implementation.md  model-kernels.md  openwater-concepts.md  parameterisation.md  programs.md  reporting.md  template-yaml-format.md  templates.md  text-model-format.md
doc/examples/text/: PET.csv  Rain.csv  two_catchment_routing.yaml
openwater/: __init__.py  array_params.py  catchments.py  cli_releases.py  cli_run.py  clip.py  config.py  debugging.py  discovery.py  ensemble.py  file.py  install.py  lib.py  nodes.py  persistence.py  releases.py  results.py  single.py  split.py  style.py  template.py  text_model.py  timing.py  units.py
openwater/examples/: __init__.py  catchment_model_comparison.py  catchment_model_results.py  const.py  download_release_example.py  from_source.py  report_migration.py
openwater/tests/: .gitignore  __init__.py  system_test.py  test_cli_run.py  test_persistence.py  test_split.py  test_text_model.py
